# auto-assist

./: .gitignore  README.md  pyproject.toml
auto_assist/: __init__.py  browser.py  config.py  lib.py  main.py
auto_assist/domain/: google_scholar.py  hunter.py  prompt.py
auto_assist/tasks/: google_scholar.py
example/: authors.txt  faculty_urls.txt
notebook/: hunter.ipynb
tests/: test_lib.py
