[tool.poetry]
name = "auto-assist"
version = "0.1.0"
description = ""
authors = ["weihong.xu <xuweihong.cn@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.37.0"
fire = "^0.5.0"
beautifulsoup4 = "^4.12.2"


[[tool.poetry.source]]
name = "bfsu"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
