[tool.poetry]
name = "auto-assist"
version = "0.1.0"
description = ""
authors = ["weihong.xu <xuweihong.cn@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.37.0"
fire = "^0.5.0"
beautifulsoup4 = "^4.12.2"
datapane = "^0.17.0"
requests = {extras = ["socks"], version = "^2.32.3"}
openai = "^1.54.0"
pydantic = "^2.9.2"


[[tool.poetry.source]]
name = "bfsu"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
